k8s/fabflix.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-read-balancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: eipalloc-0b5deea23007c0579
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app.kubernetes.io/name: mysql # Target pods with label app: my-app
  ports:
    - port: 3306 # Service port (can be different from pod port)
      targetPort: 3306 # Port on which pods are listening
  type: LoadBalancer # Internal load balancer
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-write-balancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: eipalloc-0f7dcd7a3b5156f5f
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app.kubernetes.io/name: mysql # Target pods with label app: my-app
    statefulset.kubernetes.io/pod-name: mysql-primary-0
  ports:
    - port: 3306 # Service port (can be different from pod port)
      targetPort: 3306 # Port on which pods are listening
  type: LoadBalancer # Internal load balancer
  externalTrafficPolicy: Local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix
  labels:
    app: fabflix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fabflix
  template: # Attributes for each pod in the deployment
    metadata:
      labels:
        app: fabflix
    spec:
      containers:
        - name: fabflix
          image: docker.io/anmho/fabflix:k8s-af3f2d7
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix-web
  labels:
    app: fabflix-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabflix-web
  template: # Attributes for each pod in the deployment
    metadata:
      labels:
        app: fabflix-web
    spec:
      containers:
        - name: fabflix-web
          image: docker.io/anmho/fabflix-web:k8s-0f33a35
          ports:
            - containerPort: 3000
